tests/inc_dec/invalid/unknown_inc_post.amu
s32 main(){
  a++;
  return 0;
}